--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Testing socket usage",
   "dependencies": {
     "express": "^4.10.2",
+    "mysql": "^2.12.0",
     "semantic-ui": "^2.2.6",
     "socket.io": "^1.7.2",
     "supervisor": "^0.12.0"
