--- a/package.json
+++ b/package.json
@@ -5,10 +5,11 @@
   "dependencies": {
     "express": "^4.10.2",
     "gulp": "^3.9.1",
+    "moment": "^2.17.1",
     "mysql": "^2.12.0",
     "semantic-ui": "^2.2.6",
     "socket.io": "^1.7.2",
-    "supervisor": "^0.12.0"    
+    "supervisor": "^0.12.0"
   },
   "scripts": {
     "start": "supervisor index.js"
